src/test/deca/context/invalid/created/double_declaration_int.deca
{
int a;
int a; // a est déclaré deux fois
}